[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Objects/Hornet_Nests/BoidGroup.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0

[node name="BoidGroup" type="Area2D"]
collision_layer = 0
collision_mask = 3072
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
